@@ -431,7 +431,6 @@ The Apache Traffic Server Administration Manual will explain what these strings 
  proxy.config.http.cache.max_open_write_retries
  proxy.config.http.cache.max_stale_age
  proxy.config.http.cache.open_read_retry_time
- proxy.config.http.cache.open_write_retry_time
  proxy.config.http.cache.range.lookup
  proxy.config.http.cache.required_headers
  proxy.config.http.cache.vary_default_images
