@@ -1276,7 +1276,6 @@ HttpConfig::startup()
 
   // open write failure retries
   HttpEstablishStaticConfigLongLong(c.max_cache_open_write_retries, "proxy.config.http.cache.max_open_write_retries");
-  HttpEstablishStaticConfigLongLong(c.cache_open_write_retry_time, "proxy.config.http.cache.open_write_retry_time");
 
   HttpEstablishStaticConfigLongLong(c.oride.cache_http, "proxy.config.http.cache.http");
   HttpEstablishStaticConfigLongLong(c.oride.cache_ignore_client_no_cache, "proxy.config.http.cache.ignore_client_no_cache");
@@ -1571,11 +1570,6 @@ HttpConfig::reconfigure()
 
   // open write failure retries
   params->max_cache_open_write_retries = m_master.max_cache_open_write_retries;
-  params->cache_open_write_retry_time = m_master.cache_open_write_retry_time;
-
-  // open write failure retries
-  params->max_cache_open_write_retries = m_master.max_cache_open_write_retries;
-  params->cache_open_write_retry_time = m_master.cache_open_write_retry_time;
 
   params->oride.cache_http = INT_TO_BOOL(m_master.oride.cache_http);
   params->oride.cache_ignore_client_no_cache = INT_TO_BOOL(m_master.oride.cache_ignore_client_no_cache);
